# backend_optimization

./: .gitignore  CMakeLists.txt  README.md  package.xml  package_ROS1.xml  package_ROS2.xml
config/: pgo.yaml  test_mid360.yaml
include/: Header.h  ParametersRos1.h  ParametersRos2.h  interface_ros1.cpp  interface_ros1.h  interface_ros2.cpp  interface_ros2.h
include/global_localization/: Relocalization.hpp  bnb3d.h
include/map_stitch/: MapStitch.hpp  map_stitch.cpp
include/pgo/: Backend.hpp  FactorGraphOptimization.hpp  GnssProcessor.hpp  LoopClosure.hpp  MapStitch.hpp
include/utility/: evo_tool.h
launch/: map_stitch.launch  run.launch
rviz_cfg/: mapping.rviz  pgo.rviz
src/: map_stitch.cpp  pgo_service_ros1.cpp  ros1_main.cpp  ros2_main.cpp
srv/: BackendOpt.srv
